Removed MaxPermSize JVM arguments for test cases.